# caso_final_integrador_tema4

./: CMakeLists.txt  README.md  main.cpp  main.h
ejercicio1/: ejercicio1.cpp  ejercicio1.h
ejercicio2/: ejercicio2.cpp  ejercicio2.h
ejercicio3/: ejercicio3.cpp  ejercicio3.h
ejercicio4/: ejercicio4.cpp  ejercicio4.h
ejercicio5/: ejercicio5.cpp  ejercicio5.h
include/: variant.cpp  variant.h
src/: variant.cpp
